Fix for removing overflow effect from carrousel

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden; /* Hide horizontal scrollbars and remove overflow */
+}
+
 body {
   --color-text: var(--section-light-text-color);
   --color-background: var(--section-light-bg-color);
